# framework-system

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  EXAMPLES.md  EXAMPLES_ADVANCED.md  Makefile  README.md  decode_pcapng.py  devenv.nix  devenv.yaml  flake.nix  kernel-support.md  nix.md  rgbkbd.py  rust-toolchain.toml  support-matrices.md
.github/workflows/: ci.yml  package.yml
ahk/: auto_tp_disable.ahk  toggle_tp.ahk
completions/: README.md
completions/bash/: framework_tool
completions/fish/: framework_tool.fish
completions/zsh/: _framework_tool
contrib/: release.md  snap.md
framework_dotnet_ffi/: Cargo.toml  build.rs
framework_dotnet_ffi/src/: lib.rs
framework_gui/: Cargo.toml  build.rs  framework_gui-manifest.rc
framework_gui/src/: color_picker.rs  main.rs
framework_lib/: Cargo.toml  build.rs
framework_lib/src/: audio_card.rs  battery.rs  camera.rs  capsule.rs  capsule_content.rs  ccgx.rs  commandline.rs  config.rs  csme.rs  drivers.toml  ec_binary.rs  freebsd_hid.rs  guid.rs  inputmodule.rs  lib.rs  nvme.rs  os_specific.rs  parade_retimer.rs  pd_binary.rs  pd_flash.rs  power.rs  serialnum.rs  smart_battery.rs  smbios.rs  soc_gpio.rs  ssd_expansion_card.rs  touchpad.rs  touchpad_ptp.rs  touchpad_ptp_win.rs  touchscreen.rs  touchscreen_win.rs  usbhub.rs  util.rs  wmi.rs
framework_lib/src/baselines/: framework12_intel_gen13.toml  framework13_amd_7080.toml  framework13_amd_ai300.toml  framework16_amd_7080.toml  framework16_amd_ai300.toml  framework_desktop_amd_ai_max300.toml  intel_core_ultra1.toml  intel_gen11.toml  intel_gen12.toml  intel_gen13.toml
framework_lib/src/ccgx/: binary.rs  device.rs  hid.rs  mod.rs
framework_lib/src/chromium_ec/: command.rs  commands.rs  cros_ec.rs  i2c_passthrough.rs  input_deck.rs  mod.rs  panic.rs  portio.rs  portio_hwio.rs  portio_mec.rs  protocol.rs  windows.rs
framework_lib/src/commandline/: clap.rs  clap_std.rs  mod.rs  uefi.rs
framework_lib/src/esrt/: mod.rs
framework_lib/src/fw_uefi/: fs.rs  mod.rs
framework_lib/src/uefi/: esrt.rs  fs.rs  mod.rs  shell.rs
framework_lib/src/windows/: mod.rs
framework_lib/test_bins/: Framework_Laptop_13_Intel_Core_Ultra_Series1_Retimer_port01_624.cap  README.md  battery_00E3.txt  sparsify_capsule.py
framework_tool/: Cargo.toml  Makefile  build.rs  framework_tool-manifest.rc  framework_tool.1
framework_tool/completions/: README.md
framework_tool/completions/bash/: framework_tool
framework_tool/completions/fish/: framework_tool.fish
framework_tool/completions/zsh/: _framework_tool
framework_tool/src/: main.rs  uefi_main.rs
framework_uefi/: Cargo.toml  Makefile  README.md
framework_uefi/src/: main.rs
framework_uefi/tests/: test.nsh
frameworkd/: Cargo.toml  build.rs
frameworkd/res/: res.rc
frameworkd/src/: main.rs
frameworkd/wix/: main.wxs
guid_macros/: Cargo.toml
guid_macros/src/: lib.rs
snap/: snapcraft.yaml
tms/: Cargo.toml
tms/src/: main.rs
