[workspace]
# Make sure new resolver is used to avoid unifying dependency features between
# runtime and build dependencies.
# See: https://github.com/rust-lang/cargo/issues/2589
resolver = "2"

members = [
    # Linux and Windows tool to inspect and customize the system
    "framework_tool",
    # UEFI tool to inspect and customize the system
    "framework_uefi",
    # Catchall library that we'll probably want to split up further
    "framework_lib",
]

# Don't build UEFI by default. Needs special cargo invocation
default-members = [
    "framework_lib",
    "framework_tool",
]

# Need latest commit that hasn't been released yet
[patch.crates-io]
uefi = { git = "https://github.com/rust-osdev/uefi-rs", rev = "1fcf4d84d5ed10fe76055469b6df01318eb35af8" }
uefi-raw = { git = "https://github.com/rust-osdev/uefi-rs", rev = "1fcf4d84d5ed10fe76055469b6df01318eb35af8" }

[profile.release]
lto = true
