[workspace]
# Make sure new resolver is used to avoid unifying dependency features between
# runtime and build dependencies.
# See: https://github.com/rust-lang/cargo/issues/2589
resolver = "2"

members = [
    # Linux and Windows tool to inspect and customize the system
    "framework_tool",
    # UEFI tool to inspect and customize the system
    "framework_uefi",
    # Catchall library that we'll probably want to split up further
    "framework_lib",
]

# Don't build UEFI by default. Needs special cargo invocation
default-members = [
    "framework_lib",
    "framework_tool",
]

[profile.release]
lto = true
