[workspace]
# Make sure new resolver is used to avoid unifying dependency features between
# runtime and build dependencies.
# See: https://github.com/rust-lang/cargo/issues/2589
resolver = "2"

members = [
    # Linux and Windows tool to inspect and customize the system
    "framework_tool",
    # UEFI tool to inspect and customize the system
    "framework_uefi",
    # Catchall library that we'll probably want to split up further
    "framework_lib",
]

# Don't build UEFI by default. Needs special cargo invocation
default-members = [
    "framework_lib",
    "framework_tool",
]

[patch.crates-io]
# The crates.io smbios-lib requires std; this fork adds no_std support needed for UEFI builds.
# Can be removed once upstream smbios-lib supports no_std.
smbios-lib = { git = "https://github.com/FrameworkComputer/smbios-lib.git", branch = "no-std" }

[profile.release]
lto = true
