[package]
name = "framework_gui"
version = "0.4.2"
description = "GUI Tool to control Framework Computer systems"
homepage = "https://github.com/FrameworkComputer/framework-system"
repository = "https://github.com/FrameworkComputer/framework-system"
readme = "README.md"
license = "BSD-3-Clause"
edition = "2021"

[[bin]]
name = "framework_gui"
#path = "src/main.rs"
path = "src/color_picker.rs"

[dependencies]
iced = "0.13.1"
iced_aw = "0.12.2"
iced_fonts = "0.2.1"

[dependencies.framework_lib]
path = "../framework_lib"

[build-dependencies]
# Note: Only takes effect in release builds
static_vcruntime = "2.0"
embed-resource = "3.0"
winresource = "0.1.17"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = [
  "wincon"
]
