[package]
name = "framework_tool"
version = "0.4.0"
edition = "2021"

[dependencies.framework_lib]
path = "../framework_lib"

[build-dependencies]
# Note: Only takes effect in release builds
static_vcruntime = "2.0"
embed-resource = "3.0"
winresource = "0.1.17"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = [
  "wincon"
]
