[package]
name = "framework_tool"
version = "0.4.5"
description = "Tool to control Framework Computer systems"
homepage = "https://github.com/FrameworkComputer/framework-system"
repository = "https://github.com/FrameworkComputer/framework-system"
readme = "README.md"
license = "BSD-3-Clause"
edition = "2021"

[[bin]]
name = "framework_tool"
path = "src/main.rs"

[features]
default = [ ]
readonly = [ "framework_lib/readonly" ]

[dependencies.framework_lib]
path = "../framework_lib"

[build-dependencies]
# Note: Only takes effect in release builds
static_vcruntime = "2.0"
embed-resource = "3.0"
winresource = "0.1.17"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = [
  "wincon"
]

[package.metadata.winresource]
LegalCopyright = "Framework Computer Inc © 2022"
