[package]
name = "framework_tool"
version = "0.6.1"
description = "Tool to control Framework Computer systems"
homepage = "https://github.com/FrameworkComputer/framework-system"
repository = "https://github.com/FrameworkComputer/framework-system"
readme = "../README.md"
license = "BSD-3-Clause"
edition = "2021"

[[bin]]
name = "framework_tool"
path = "src/main.rs"

[features]
default = [ ]
readonly = [ "framework_lib/readonly" ]
nvidia = [ "framework_lib/nvidia" ]

[dependencies.framework_lib]
path = "../framework_lib"

[build-dependencies]
static_vcruntime = "3.0"
embed-resource = "3.0"
winresource = "0.1.17"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = [
  "wincon"
]

[package.metadata.winresource]
LegalCopyright = "Framework Computer Inc © 2022"

[package.metadata.deb]
name = "framework-tool"
maintainer = "Framework Computer Inc <linux@frame.work>"
depends = "libudev1"
section = "utils"
priority = "optional"
features = ["nvidia"]
assets = [
    ["target/release/framework_tool", "usr/bin/", "755"],
    ["../completions/bash/framework_tool", "usr/share/bash-completion/completions/framework_tool", "644"],
    ["../completions/zsh/_framework_tool", "usr/share/zsh/site-functions/_framework_tool", "644"],
    ["../completions/fish/framework_tool.fish", "usr/share/fish/vendor_completions.d/framework_tool.fish", "644"],
    ["../LICENSE.md", "usr/share/doc/framework-tool/LICENSE.md", "644"],
    ["../README.md", "usr/share/doc/framework-tool/README.md", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/framework_tool", dest = "/usr/bin/framework_tool", mode = "755" },
    { source = "../completions/bash/framework_tool", dest = "/usr/share/bash-completion/completions/framework_tool", mode = "644" },
    { source = "../completions/zsh/_framework_tool", dest = "/usr/share/zsh/site-functions/_framework_tool", mode = "644" },
    { source = "../completions/fish/framework_tool.fish", dest = "/usr/share/fish/vendor_completions.d/framework_tool.fish", mode = "644" },
    { source = "../LICENSE.md", dest = "/usr/share/doc/framework-tool/LICENSE.md", mode = "644", doc = true },
    { source = "../README.md", dest = "/usr/share/doc/framework-tool/README.md", mode = "644", doc = true },
]

[package.metadata.generate-rpm.requires]
systemd-libs = "*"
