[package]
name = "framework_uefi"
version = "0.1.0"
edition = "2021"
# Minimum Supported Rust Version
rust-version = "1.70"

[[bin]]
name = "uefitool"
path = "src/main.rs"

[dependencies]
uefi = { version = "0.30", features = ["alloc", "global_allocator", "panic_handler", "logger"] }
uefi-raw = { version = "0.6.0" }
log = { version = "0.4.21" }

[dependencies.framework_lib]
path = "../framework_lib"
features = ["uefi"]
default-features = false
