[package]
name = "framework_uefi"
version = "0.4.0"
edition = "2021"
# Minimum Supported Rust Version
rust-version = "1.74"

[[bin]]
name = "uefitool"
path = "src/main.rs"

[dependencies]
uefi = { version = "0.20", features = ["alloc"] }
uefi-services = "0.17"
log = { version = "0.4", default-features = true }

[dependencies.framework_lib]
path = "../framework_lib"
features = ["uefi"]
default-features = false
