[package]
name = "framework_uefi"
version = "0.4.3"
description = "UEFI Tool to control Framework Computer systems"
homepage = "https://github.com/FrameworkComputer/framework-system"
repository = "https://github.com/FrameworkComputer/framework-system"
readme = "README.md"
license = "BSD-3-Clause"
edition = "2021"
# Minimum Supported Rust Version
rust-version = "1.74"

[[bin]]
name = "uefitool"
path = "src/main.rs"

[features]
default = [ ]
readonly = [ "framework_lib/readonly" ]

[dependencies]
uefi = { version = "0.20", features = ["alloc"] }
uefi-services = "0.17"
log = { version = "0.4", default-features = true }

[dependencies.framework_lib]
path = "../framework_lib"
features = ["uefi"]
default-features = false
