[package]
name = "frameworkd"
version = "0.1.0"
edition = "2021"

[features]
default = ["linux"]
linux = ["framework_lib/linux"]
windows = ["framework_lib/windows"]

[dependencies]
trayicon = "0.2"
winapi = { version = "0.3.9", features = ["winuser", "windef", "minwindef", "shellapi", "libloaderapi", "commctrl", "basetsd"] }
#crossbeam-channel = "0.5"
brightness = "0.5.0"
qmk_hid = { git = 'https://github.com/FrameworkComputer/qmk_hid' }

[dependencies.framework_lib]
path = "../framework_lib"
default-features = false
